force-app/main/default/objects/Program__c/fields/Aviation_Costs__c.field-meta.xml
<CustomField>
    <fullName>Aviation_Costs__c</fullName>
    <label>Aviation Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>