force-app/main/default/objects/Program__c/fields/Cash_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Cash_Turnover__c</fullName>
    <label>Cash Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>