force-app/main/default/objects/Program__c/fields/Front_Money__c.field-meta.xml
<CustomField>
    <fullName>Front_Money__c</fullName>
    <label>Front Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>