force-app/main/default/objects/Program__c/fields/Gaming_Comp__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Comp__c</fullName>
    <label>Expenses Allowance Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>