force-app/main/default/objects/Program__c/fields/Junket_Operator__c.field-meta.xml
<CustomField>
    <fullName>Junket_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junket Operator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Junket_Operator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (Junket Operator)</relationshipLabel>
    <relationshipName>Programs_Junket_Operator</relationshipName>
    <type>Lookup</type>
</CustomField>