force-app/main/default/objects/Program__c/fields/Junket_Operator_Account__c.field-meta.xml
<CustomField>
    <fullName>Junket_Operator_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junket Operator Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs Junket Operator</relationshipLabel>
    <relationshipName>Program_Junket_Operator</relationshipName>
    <type>Lookup</type>
</CustomField>