force-app/main/default/objects/Program__c/fields/Non_Gaming_Comp__c.field-meta.xml
<CustomField>
    <fullName>Non_Gaming_Comp__c</fullName>
    <label>Total Non Gaming Comp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>