force-app/main/default/objects/Program__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Program Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>