force-app/main/default/objects/Program__c/fields/Promo_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Promo_Voucher__c</fullName>
    <label>Lucky Money/Promo Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>