force-app/main/default/objects/Program__c/fields/Rebate_Paid__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Paid__c</fullName>
    <label>Rebate Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>