force-app/main/default/objects/Program__c/fields/Rebate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Rate__c</fullName>
    <label>Rebate Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>