force-app/main/default/objects/Program__c/fields/Rolling_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Turnover__c</fullName>
    <label>Rolling Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>