force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>End_Date__c</columns>
    <columns>Cash_Turnover__c</columns>
    <columns>Actual_Win__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>